--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "grunt": "*",
+    "grunt-contrib-clean": "*",
     "grunt-cli": "*",
     "grunt-contrib-clean": "*",
     "grunt-contrib-compass": "*",
