--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "grunt-contrib-concat": "*",
     "grunt-contrib-connect": "*",
     "grunt-contrib-jshint": "*",
-    "grunt-contrib-watch": "*"
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-watch": "*",
+    "jshint-stylish": "^0.2.0"
   }
 }
