add karma test framework

--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "devDependencies": {
     "bower": "*",
+    "karma": "*",
+    "karma-coverage": "*",
+    "karma-junit-reporter": "*",
+    "karma-mocha": "*",
+    "karma-sinon-chai": "*",
     "grunt": "*",
     "grunt-contrib-clean": "*",
     "grunt-browserify": "*",
@@ -17,6 +22,7 @@
     "grunt-contrib-connect": "*",
     "grunt-contrib-jshint": "*",
     "grunt-contrib-jshint": "*",
+    "grunt-open": "*",
     "grunt-contrib-watch": "*",
     "jshint-stylish": "^0.2.0"
   }
