--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "karma-junit-reporter": "*",
     "karma-mocha": "*",
     "karma-sinon-chai": "*",
+    "karma-phantomjs-launcher": "*",
     "grunt": "*",
+    "grunt-karma": "*",
     "grunt-contrib-clean": "*",
     "grunt-browserify": "*",
     "grunt-cli": "*",
