--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "devDependencies": {
     "bower": "*",
+    "chai": "*",
+    "sinon": "*",
     "grunt": "*",
     "grunt-contrib-clean": "*",
     "grunt-browserify": "*",
@@ -18,6 +20,8 @@
     "grunt-contrib-jshint": "*",
     "grunt-contrib-jshint": "*",
     "grunt-contrib-watch": "*",
+    "grunt-mocha-test": "*",
+    "blanket": "*",
     "jshint-stylish": "^0.2.0"
   }
 }
