add grunt open and cleanup build system

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "bower": "*",
     "chai": "*",
     "grunt": "*",
-    "grunt-contrib-clean": "*",
     "grunt-browserify": "*",
+    "grunt-contrib-clean": "*",
     "grunt-cli": "*",
     "grunt-contrib-clean": "*",
     "grunt-contrib-compass": "*",
@@ -21,6 +21,7 @@
     "grunt-contrib-jshint": "*",
     "grunt-contrib-watch": "*",
     "grunt-mocha-test": "*",
+    "grunt-open": "*",
     "jshint-stylish": "^0.2.0",
     "jquery": "*",
     "rewire": "*",
